--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Personal portfolio website using - HTML, CSS, JAVASCRIPT; FIREBASE LIVE DATABSE & JQuery
+Personal portfolio website using - HTML, CSS, ZASS,JAVASCRIPT; FIREBASE LIVE DATABSE & JQuery
